<resources>
    <string name="app_name">Lgu Circle</string>


    <!--    TODO: Authentication-->

    <string name="login">Login</string>
    <string name="student">Student</string>
    <string name="authority">Authority</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_pass"><u>forgot password</u></string>
    <string name="reset_pass">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="new_user">New User</string>
    <string name="enter">Enter</string>
    <string name="pass_not_match">Password Not Matched</string>
    <string name="email_verify_msg">First Verify Email Then Login</string>

    <string name="sign_up">Sign Up</string>
    <string name="already_user">Already User?</string>
    <string name="f_name">First name</string>
    <string name="l_name">Last name</string>
    <string name="dep">Department</string>
    <string name="dob">Date of birth</string>
    <string name="phone">Phone number</string>
    <string name="forgot">Forgot Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pass_must_match">Password Must Match</string>
    <string name="your_profile">Your Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="services">Services</string>
    <string name="which_service">Which service you provide or looking for</string>
    <string name="change_pass">Change Password</string>
    <string name="feed_back">Feed Back</string>
    <string name="contact_us">Contact Us</string>
    <string name="content_description" />

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Cras feugiat, nunc eget volutpat viverra, lacus ligula venenatis nulla,
        in accumsan eros eros nec ipsum. Fusce eget massa id lorem blandit lobortis.
        Donec lacus ligula, commodo quis eleifend ac, rhoncus sed mi. Curabitur luctus justo
        vel consequat fermentum. Donec facilisis elit in sem suscipit pharetra. Curabitur porta et dolor eget pretium.
        Mauris quam augue, interdum nec tempor vitae, consectetur at erat.</string>
    <string name="about">About</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_camera">Camera</string>
    <string name="sign_out">Sign Out</string>
    <string name="pass_updated">Password Update</string>
    <string name="per_denied">Permission Denied</string>
    <string name="uploading">Uploading</string>
    <string name="please_wait">Please wait</string>
    <string name="user_role">User Role</string>
    <string name="submit">Submit</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="intent_open_full_screen_image">Open Image</string>
    <string name="intent_post_user_id">User post ID</string>

    <style name="HeadingText">heading Text</style>

    <string name="reply_lowercase">reply</string>
    <string name="post_id">Post Id</string>
    <string name="intent_posted_by_id">posted_by_id</string>
    <string name="intent_opinion_id">opinion_id</string>
    <string name="intent_opinioned_by_id">opinioned_by_id</string>
    <string name="label_opinion">opinion</string>
    <string name="intent_notification_type">noti_type</string>
    <string name="label_replied_to_opinion">replied to your opinion</string>
    <string name="label_reply">reply</string>
    <string name="intent_post_id">post_id</string>
    <string name="label_leave_opinion_on_post">left an opinion on your post</string>
    <string name="today">Today</string>
    <string name="search">Search</string>
    <string name="bottom_menu">Bottom Sheet</string>
    <string name="update">Update</string>
    <string name="phone_no">Phone No</string>
    <string name="idea_register">Register your idea</string>
    <string name="register_idea">Register Idea</string>
    <string name="idea_confirmation">Are you sure you want to register your idea?</string>
    <string name="sending">Sending</string>
    <string name="profile">Profile</string>
    <string name="staff">Staff</string>
    <string name="not_register_user">user not registered</string>
    <string name="admin">Admin</string>
    <string name="date_time">Date time</string>
    <string name="add_image">Add Image</string>
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="pickup_date">Pickup</string>
    <string name="events">Events</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="_default">default</string>
    <string name="manual">manual</string>
    <string name="accept_message">Hope you are doing well. We had go through your idea. Our team selected you for the interview. Kindly concern with the incubation centre.
    Regards
    LGU incubator</string>
    <string name="ideas">Ideas</string>
    <string name="idea_registration">Incubation</string>
    <string name="garrisonian_services">Services</string>

    <string name="label_first_name">First Name *</string>
    <string name="label_last_name">Last Name *</string>
    <string name="label_new_user">New user?</string>
    <string name="label_create_an_acc">Create an account?</string>
    <string name="choose_year">Year</string>
    <string name="choose_session">Session</string>
    <string name="choose_program">Program</string>
    <string name="choose_department">Dept</string>

    <string name="invalid_first_name">Invalid first name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="invalid_email_format">Email is not correctly formatted</string>
    <string name="invalid_phone_no_format">Phone number is not correctly formatted</string>
    <string name="invalid_password_format">Password is not correctly formatted</string>
    <string name="invalid_url_format">Link provided is not correctly formatted</string>



    <string name="hint_password_first">Password at least of&#160;</string>
    <string name="hint_password_second">6 characters </string>
    <string name="hint_password_third">and must be a combination of&#160;</string>
    <string name="hint_password_fourth">digits&#160;</string>
    <string name="hint_password_fifth">,&#160;</string>
    <string name="hint_password_sixth">letters&#160;</string>
    <string name="hint_password_seventh">and&#160;</string>
    <string name="hint_password_eighth">special characters</string>
    <string name="signing_in">Signing In User</string>
    <string name="signing_up">Signing Up User</string>
    <string name="invalid_confirm_password_not_matched">Confirm password and password not matched</string>
    <string name="delete">Delete</string>
    <string name="profile_updated">Profile updated successfully</string>
    <string name="post_delete">delete</string>
    <string name="shared_preference">Shared_Preference</string>
    <string name="new_message">you have new message</string>
    <string name="default_notification_channel_id">My Notifications</string>
    <string name="dummy_name">Fahad Mughal</string>
    <string name="dummy_text">New message here</string>
    <string name="msg_subscribed">subscribed</string>
    <string name="msg_subscribe_failed">subscription failed</string>
    <string name="notification">Notification</string>


</resources>
