<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey0"
        android:fillViewport="true"
        android:scrollbarThumbVertical="@null"
        tools:context=".Authentication.LoginActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_150sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/login_logo"
                app:layout_constraintBottom_toTopOf="@id/cl_input_fields"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_input_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_22sdp"
                    android:layout_marginEnd="@dimen/_22sdp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions|textEmailAddress"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_22sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_22sdp"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_20sdp"
                    android:paddingEnd="@dimen/_20sdp"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/login_email" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="?android:selectableItemBackground"
                android:fontFamily="@font/basier_circle"
                android:onClick="forgotPass"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingBottom="@dimen/_3sdp"
                android:text="@string/forgot_pass"
                android:textColor="@color/steel"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_input_fields" />

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_22sdp"
                android:background="@drawable/active_background"
                android:enabled="false"
                android:fontFamily="@font/basiercircle_semibold"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@id/forgot_pass" />


            <LinearLayout
                android:id="@+id/ll_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="?android:selectableItemBackground"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_5sdp"
                android:paddingTop="@dimen/_3sdp"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingBottom="@dimen/_3sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_btn">

                <TextView
                    android:id="@+id/new_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/basiercircle_regular"
                    android:text="@string/label_new_user"
                    android:textColor="@color/steel"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/create_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/basiercircle_regular"
                    android:text="@string/label_create_an_acc"
                    android:textColor="@color/Green"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>