<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@null"
    tools:context=".activity.EditProfileActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/gradient_shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_vector_back_arrow"
        app:title="@string/edit_profile"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_15sdp">


            <EditText
                android:id="@+id/e_fname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/edittext_background"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:hint="@string/f_name"
                android:fontFamily="@font/basiercircle_regular"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/e_lname"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/basiercircle_regular"
                android:textSize="@dimen/_12ssp"
                android:background="@drawable/edittext_background"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:hint="@string/l_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/e_fname" />


            <TextView
                android:id="@+id/e_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:fontFamily="@font/basiercircle_regular"
                android:textSize="@dimen/_12ssp"
                android:padding="@dimen/_5sdp"
                app:layout_constraintTop_toBottomOf="@id/e_lname" />


            <androidx.cardview.widget.CardView
                android:id="@+id/codePickerCv"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:cardCornerRadius="@dimen/_25sdp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="@id/e_phone_no"
                app:layout_constraintEnd_toStartOf="@id/e_phone_no"
                app:layout_constraintStart_toStartOf="@id/e_email"
                app:layout_constraintTop_toTopOf="@id/e_phone_no">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/sp_country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:layout_gravity="center_vertical"
                    android:visibility="visible"
                    app:ccpDialog_showCloseIcon="true"
                    app:ccp_textSize="@dimen/_12ssp"
                    android:paddingHorizontal="@dimen/_5sdp" />
            </androidx.cardview.widget.CardView>


            <EditText
                android:id="@+id/e_phone_no"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edittext_background"
                android:hint="@string/phone_no"
                android:inputType="phone"
                android:fontFamily="@font/basiercircle_regular"
                android:textSize="@dimen/_12ssp"
                android:maxLength="11"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="@id/e_email"
                app:layout_constraintStart_toEndOf="@id/codePickerCv"
                app:layout_constraintTop_toBottomOf="@id/e_email" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxHeight="@dimen/_200sdp"
                app:layout_constraintTop_toBottomOf="@id/codePickerCv"
                app:layout_constraintStart_toStartOf="@id/codePickerCv"
                app:layout_constraintEnd_toEndOf="@id/e_phone_no"
                android:background="@drawable/edittext_background"
                android:hint="Bio"
                android:fontFamily="@font/basiercircle_regular"
                android:textSize="@dimen/_12ssp"
                android:paddingHorizontal="@dimen/_20sdp"
                android:paddingVertical="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:minHeight="@dimen/_40sdp"
                android:id="@+id/bio"
                />


            <Button
                android:id="@+id/update_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_50sdp"
                android:backgroundTint="@color/Green"
                android:minWidth="@dimen/_90sdp"
                android:minHeight="?attr/actionBarSize"
                android:text="@string/update"
                android:fontFamily="@font/basiercircle_regular"
                android:textSize="@dimen/_12ssp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bio" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>